gh-pages: spacing fixes;

--- a/src/sass/layouts/_intro.scss
+++ b/src/sass/layouts/_intro.scss
@@ -19,4 +19,8 @@
     &__brandLogo {
         margin-bottom: $spacer * 0.75;
     }
+
+    &__lead {
+        margin-bottom: 0;
+    }
 }
